--- a/src/App.css
+++ b/src/App.css
@@ -176,6 +176,15 @@ padding:5px;
   }
 
  @media (max-width:600px) {
+  .login {
+    width: 390px;
+    height:340px;
+   
+ 
+  }
+  .text{
+    left:90px;
+  }
   .video{
     z-index: -1;
     width:100%;
@@ -247,6 +256,7 @@ padding:5px;
      top: 240px ;
     }
     @media( max-width:399px) {
+      
       .quiz{
         width:50px;
         height: 50px;
